# olf

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/libs/: CMakeLists.txt  chem.cpp  chem.hpp
examples/libs/Operations/: DMolarities2MeanMolarWeightOp.hpp  MWMassF2MeanMolarWeightOp.hpp  MWMolarities2DensityOp.hpp  MWMoleF2MeanMolarWeightOp.hpp  MoleFMMWD2MolaritiesOp.hpp
examples/libs/Quantities/: Density.hpp  MassFractions.hpp  MeanMolarWeight.hpp  Molarities.hpp  MoleFractions.hpp  MoleWeights.hpp
examples/user_src/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt  OLF.hpp  Operation.hpp  OperationMetadata.hpp  Quantity.hpp
